# hunker

./: .gitignore  CMakeLists.txt  README.md  do_build.sh  do_run.sh  dos2unix_all.sh  imu_start.sh  live_log.sh  sta.sh  start_hunker.sh  start_hunker0.sh  stop.sh  test.txt
cmake/: Findlgpio.cmake
install/: local_setup.sh  setup.sh
install/hunker/share/hunker/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/hunker/share/xbox_controller/: local_setup.dsv  local_setup.sh  package.dsv  package.xml
install/hunker/share/xbox_controller/cmake/: xbox_controllerConfig.cmake
launch/: robot_launch.py
src/: BalanceControllerNode.cpp  BalanceControllerNode.h  IMU_bno055.h  Motor.cpp  Motor.h  PIDControllerNode.cpp  PIDControllerNode.h  Robot.h  RobotNode.cpp  RobotNode.h  RobotNode.hpp  XboxControllerNode.cpp  XboxControllerNode.h  main.cpp  myGpioPins.h  t.txt
sw/REVLib_arm64/2026.0.5/cpp/: libREVLib.so.debug
sw/REVLib_arm64/2026.0.5/cpp/include/: CIEColor.h  ColorMatch.h  SparkClosedLoopController.h  SparkLimitSwitch.h  SparkMax.h  SparkRelativeEncoder.h
sw/REVLib_arm64/2026.0.5/cpp/include/config/: AlternateEncoderConfig.h  AnalogSensorConfig.h  AnalogSensorConfigAccessor.h  ClosedLoopConfig.h  DetachedEncoderConfig.h  DetachedEncoderParameters.h  EncoderConfig.h  ExternalEncoderConfig.h  ExternalEncoderConfigAccessor.h  FeedForwardConfig.h  FeedForwardConfigAccessor.h  SparkMaxConfig.h
sw/REVLib_arm64/2026.0.5/cpp/include/sim/: NoiseGenerator.h  SparkExternalEncoderSim.h  SparkMaxSim.h
sw/REVLib_arm64/2026.0.5/cpp/include/util/: StatusLogger.h
sw/REVLib_arm64/2026.0.5/driver/include/: CANCommonParameters.h  CANDetachedEncoderDriver.h  CANDetachedEncoderFrames.h  CANDetachedEncoderParameters.h  CANServoHubFrames.h  CANServoHubParameters.h  CANSparkDriver.h  CANSparkFrames.h  CANSparkParameters.h  REVCommon.h  REVUtils.h  SparkFrameManager.h  StatusLoggerDriver.h
sw/REVLib_arm64/2026.0.5/driver/include/canupdate/: DfuSeFile.h
sw/hunker/: CMakeLists.txt  package.xml  start_hunker.sh
sw/hunker/REVLib_arm64/2026.0.5/BackendDriver/: libBackendDriver.so.debug
sw/hunker/REVLib_arm64/2026.0.5/cpp/include/: ServoHub.h  ServoHubLowLevel.h  SparkAbsoluteEncoder.h  SparkAnalogSensor.h  SparkBase.h  SparkSim.h
sw/hunker/REVLib_arm64/2026.0.5/cpp/include/config/: AlternateEncoderConfigAccessor.h  DetachedEncoderConfigAccessor.h  LimitSwitchConfig.h  ServoHubParameters.h  SoftLimitConfigAccessor.h  SparkBaseConfigAccessor.h  SparkFlexConfig.h  SparkFlexConfigAccessor.h  SparkMaxConfigAccessor.h
sw/hunker/REVLib_arm64/2026.0.5/cpp/include/sim/: SparkAnalogSensorSim.h  SparkMaxAlternateEncoderSim.h  SparkRelativeEncoderSim.h  SparkSimFaultManager.h
sw/hunker/REVLib_arm64/2026.0.5/driver/: libREVLibDriver.so.debug
sw/hunker/REVLib_arm64/2026.0.5/driver/include/: CANDriverPrivate.h  CANServoHubDriver.h  REVLibDaemon.h
sw/hunker/REVLib_arm64/2026.0.5/driver/include/canupdate/: CANSparkSWDL.h
sw/hunker/REVLib_arm64/2026.0.5/driver/include/rev/: REVLibVersion.h
sw/hunker/REVLib_arm64/2026.0.5/driver/include/sim/: CANDetachedEncoder.h  CANServoHub.h  CANSpark.h  MAXMotion.h  SmartCurrentLimit.h
sw/hunker/REVLib_arm64_static/include/: $DATA  AbsoluteEncoder.h  AnalogInput.h  CANDeviceScanner.h  ConfigureTypes.h  DetachedEncoderLowLevel.h  REVLibError.h  ServoHubSim.h  SparkFlex.h  SparkFlexExternalEncoder.h  SparkLowLevel.h  SparkMaxAlternateEncoder.h
sw/hunker/REVLib_arm64_static/include/config/: AbsoluteEncoderConfig.h  AbsoluteEncoderConfigAccessor.h  BaseConfig.h  ClosedLoopConfigAccessor.h  DetachedSignalsConfig.h  DetachedSignalsConfigAccessor.h  EncoderConfigAccessor.h  LimitSwitchConfigAccessor.h  MAXMotionConfig.h  MAXMotionConfigAccessor.h  ServoChannelConfig.h  ServoChannelConfigAccessor.h  ServoHubConfig.h  ServoHubConfigAccessor.h  SignalsConfig.h  SignalsConfigAccessor.h  SoftLimitConfig.h  SparkBaseConfig.h  SparkParameters.h
sw/hunker/REVLib_arm64_static/include/sim/: DetachedEncoderSim.h  MovingAverageFilterSim.h  ServoHubSimFaultManager.h  SparkAbsoluteEncoderSim.h  SparkFlexSim.h  SparkLimitSwitchSim.h
sw/hunker/REVLib_arm64_static/include/t/: ClosedLoopTypes.h  ColorSensorV3.h  DetachedEncoder.h  RelativeEncoder.h  ServoChannel.h  SparkSoftLimit.h  SplineEncoder.h
sw/hunker/cmake/: Findlgpio.cmake  Findrevlib.cmake  Findwpilibc.cmake
sw/hunker/install/: local_setup.sh  setup.sh
sw/hunker/install/robot/share/robot/: package.sh
sw/hunker/launch/install/: local_setup.sh  setup.sh
sw/hunker/log/: latest_build
sw/hunker/src/: BNO080.cpp  BNO080.h  BalanceDrive.cpp  BalanceDrive.h  FaultIndicator.cpp  FaultIndicator.h  FaultIndicator.hpp  IMU_bno055.cpp  Motor.cpp  Motor.h  MyGpio.cpp  MyGpio.h  MyGpio.hpp  Robot.cpp  Robot.h  RobotNode.cpp  RobotNode.h  RobotNode.hpp  common.h  main.cpp  myGpioPins.h  utils.h
sw/hunker/test/: CMakeLists.txt  SparkMax.h  common.h  lgpio.h  stubs.cpp  stubs.h  test_balance_drive.cpp  test_fault_indicator.cpp  test_mygpio.cpp  test_robot.cpp
sw/hunker/test/config/: SparkMaxConfig.h
sw/hunker/test/rclcpp/: rclcpp.hpp
sw/hunker/test/sensor_msgs/msg/: imu.hpp  joy.hpp  joy_feedback.hpp
sw/hunker/test/std_msgs/msg/: bool.hpp  int32.hpp  string.hpp
sw/ros_ws/: do_build.sh
sw/ros_ws/install/: local_setup.sh  setup.sh
sw/ros_ws/install/bno08x_ros2_driver/lib/bno08x_ros2_driver/: bno08x_driver
sw/ros_ws/install/bno08x_ros2_driver/share/bno08x_ros2_driver/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
sw/ros_ws/install/bno08x_ros2_driver/share/bno08x_ros2_driver/config/: bno085_i2c.yaml  bno085_uart.yaml
sw/ros_ws/log/: latest_build  latest_test
sw/ros_ws/src/bno08x_ros2_driver/: CMakeLists.txt  ReadMe.md
sw/ros_ws/src/bno08x_ros2_driver/config/: bno085_i2c.yaml
sw/ros_ws/src/bno08x_ros2_driver/include/bno08x_ros2_driver/: bno08x.hpp  bno08x_ros.hpp  uart_interface.hpp
sw/ros_ws/src/bno08x_ros2_driver/src/: bno08x.cpp  bno08x_ros.cpp  ros_node.cpp
